--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
     "sunspikes/php-ratelimiter": "^1.2",
     "magento/framework": "^100.1|^101.0|^102.0",
     "magento/module-checkout": "^100.1",
-    "magento/module-quote": "^100.1|^101.0"
+    "magento/module-quote": "^100.1|^101.0",
+  },
+  "require-dev": {
+    "ext/json": "*"
   },
   "autoload": {
     "psr-4": {
@@ -29,4 +32,4 @@
       "registration.php"
     ]
   }
-}
+},
