--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "magento/module-quote": "^100.1|^101.0"
   },
   "require-dev": {
+    "laminas/laminas-http": "^2.12",
     "ext/json": "*"
   },
   "autoload": {
