Update integration tests to M2.4.3-p1

--- a/.github/workflows/extdn-integration-tests.yml
+++ b/.github/workflows/extdn-integration-tests.yml
@@ -42,7 +42,7 @@ jobs:
           magento_post_install_script: .github/workflows/extdn-integration-tests-post-install.sh
       - uses: docker://yireo/github-actions-magento-integration-tests:7.4
         env:
-          MAGENTO_VERSION: '2.4.1'
+          MAGENTO_VERSION: '2.4.3-p1'
         with:
           magento_pre_install_script: .github/workflows/extdn-integration-tests-pre-install-m24.sh
           magento_post_install_script: .github/workflows/extdn-integration-tests-post-install.sh
