--- a/.github/workflows/extdn-integration-tests.yml
+++ b/.github/workflows/extdn-integration-tests.yml
@@ -34,7 +34,7 @@ jobs:
       COMPOSER_NAME: ${{ secrets.COMPOSER_NAME }}
     steps:
       - uses: actions/checkout@v2
-      - uses: docker://yireo/github-actions-magento-integration-tests:7.4
+      - uses: extdn/github-actions-m2/magento-integration-tests/7.4@master
         env:
           MAGENTO_VERSION: '2.4.3-p1'
         with:
