--- a/.github/workflows/extdn-integration-tests.yml
+++ b/.github/workflows/extdn-integration-tests.yml
@@ -37,6 +37,7 @@ jobs:
       - uses: extdn/github-actions-m2/magento-integration-tests/7.4@master
         env:
           MAGENTO_VERSION: '2.4.3-p1'
+          COMPOSER_VERSION: '2'
         with:
           magento_pre_install_script: .github/workflows/extdn-integration-tests-pre-install-m24.sh
           magento_post_install_script: .github/workflows/extdn-integration-tests-post-install.sh
