--- a/.github/workflows/extdn-unit-tests.yml
+++ b/.github/workflows/extdn-unit-tests.yml
@@ -12,9 +12,9 @@ jobs:
       COMPOSER_NAME: ${{ secrets.COMPOSER_NAME }}
     steps:
       - uses: actions/checkout@v2
-      - uses: docker://yireo/github-actions-magento-unit-tests:7.3
+      - uses: extdn/github-actions-m2/magento-unit-tests/7.4@master
         env:
-          MAGENTO_VERSION: '2.3.5-p2'
-      - uses: docker://yireo/github-actions-magento-unit-tests:7.4
-        env:
-          MAGENTO_VERSION: '2.4.0'
+          COMPOSER_VERSION: '2'
+          MAGENTO_VERSION: '2.4.3-p1'
+        with:
+          magento_pre_install_script: .github/workflows/extdn-unit-tests-pre-install-m24.sh
