--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "yireo/magento2-graph-ql-rate-limiting",
   "license": "OSL-3.0",
   "type": "magento2-module",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "homepage": "https://github.com/yireo/Yireo_GraphQlRateLimiting",
   "description": "Magento 2 module to add rate limiting to GraphQL resources",
   "keywords": [
@@ -20,6 +20,7 @@
     "magento/module-checkout": "^100.1",
     "magento/module-quote": "^100.1|^101.0",
     "sunspikes/php-ratelimiter": "1.2.1"
+    "php": "7.4"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
