--- a/.module.ini
+++ b/.module.ini
@@ -1,3 +1,5 @@
 EXTENSION_VENDOR="Yireo"
 EXTENSION_NAME="GraphQlRateLimiting"
 COMPOSER_NAME="yireo/magento2-graph-ql-rate-limiting"
+PHP_VERSIONS=("7.4")
+
